--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -539,13 +539,13 @@
 
                     <div class="form-group">
                       <label>Amount</label>
-                      <input type="number" placeholder="0.00" step="0.01" />
+                      <input type="number" id="billing-amount" placeholder="0.00" step="0.01" />
                     </div>
                   </div>
 
                   <div class="form-group">
                     <label>Due Date</label>
-                    <input type="date" />
+                    <input type="date" id="billing-due-date" />
                   </div>
 
                   <button type="submit" class="btn-submit">
